# sqpy

./: .flake8  .gitignore  .pre-commit-config.yaml  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
sqpy/: __init__.py  __main__.py  main.py
tests/: test_popup_print.py  test_scancel_dialog.py  test_sqpy.py
