[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["htmlcov"] # Exclude the coverage report file from setuptools package finder

[project]
name = "sqpy"
version = "0.0.1"
authors = [
    { name = "Mateusz Zelent", email = "mateusz.zeletn@amu.edu.pl" },
    { name = "Mathieu Moalic", email = "mathieu.moalic@amu.edu.pl" }
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mypy",
    "pytest-mock"
]

[tool.mypy]
mypy_path = "pyzfn"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
disallow_untyped_calls = false
strict = true

[tool.pyright]
reportOptionalMemberAccess = false


[tool.pytest.ini_options]
addopts = "-v --mypy -p no:warnings --cov=sqpy --cov-report=html --doctest-modules --ignore=sqpy/__main__.py"

