[metadata]
name = sqpy
version = 0.0.1
author = Mateusz Zelent
author_email = mateusz.zelent@amu.edu.pl
description = Python wrapper for inetractive Slurm squeue jobs management 
long_description = file: README.md
long_description_content_type = text/markdown
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    sqpy
python_requires = >=3.8
zip_safe = no

[options.packages.find]
where = src
